k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: stock-market-dashboard
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: app-db-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: app-db-data
          persistentVolumeClaim:
            claimName: app-db-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: stock-market-dashboard
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
