k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: stock-market-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: stock-market-dashboard
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: app-ui
                port:
                  number: 3000
